<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/walletFragment"
        android:icon="@drawable/ic_wallet"
        android:title="@string/wallet" />

    <item
        android:id="@+id/transactionsFragment"
        android:icon="@drawable/ic_transactions"
        android:title="@string/transactions" />

    <item
        android:id="@+id/insightsFragment"
        android:icon="@drawable/ic_insights"
        android:title="@string/insights" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>